[package]
name = "codetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1.9.1"
url="2.4.0"
serde="0.9.7"
lazy_static="1.4.0"

anyhow = "1"
bytes = "1"
futures = "0.3"
tokio = { version = "1.31.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }